{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 559,
  "lineage": "ac486e94-2523-c176-94ac-15a10904fb07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:446560830204:instance/i-0b2db4fdb151aad85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prometheus_profile",
            "id": "i-0b2db4fdb151aad85",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prometheus_aws_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099429873926af186",
            "private_dns": "ip-11-0-1-175.ec2.internal",
            "private_ip": "11.0.1.175",
            "public_dns": "ec2-34-205-85-23.compute-1.amazonaws.com",
            "public_ip": "34.205.85.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09c78d4f1bffb133b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e275c84ff6ff2ab0",
            "tags": {
              "Environment": "Prod",
              "Name": "Promethus_Server_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05e2f10ee4b6f7696"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.prometheus_profile",
            "aws_iam_role.prometheus_role",
            "aws_key_pair.prometheus_key_pair",
            "aws_security_group.prometheus_security_group",
            "aws_subnet.prometheus_subnet",
            "aws_vpc.prometheus_vpc",
            "data.template_file.script"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prometheus_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446560830204:internet-gateway/igw-0844dab6b9d3434e5",
            "id": "igw-0844dab6b9d3434e5",
            "owner_id": "446560830204",
            "tags": {
              "Environment": "Prod",
              "Name": "Promethus_Server_ig"
            },
            "vpc_id": "vpc-0731ff7e592cc7c7a"
          },
          "dependencies": [
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prometheus_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0844dab6b9d3434e5",
            "id": "r-rtb-06d919e4bc112c0f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06d919e4bc112c0f4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prometheus_ig",
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prometheus_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0be5a5434232c870e",
            "owner_id": "446560830204",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0844dab6b9d3434e5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "Promethus_Server_route_table"
            },
            "vpc_id": "vpc-0731ff7e592cc7c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prometheus_ig",
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prometheus_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d6eb0a617d07838",
            "route_table_id": "rtb-0be5a5434232c870e",
            "subnet_id": "subnet-0e275c84ff6ff2ab0"
          },
          "dependencies": [
            "aws_internet_gateway.prometheus_ig",
            "aws_route_table.prometheus_route_table",
            "aws_subnet.prometheus_subnet",
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prometheus_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446560830204:security-group/sg-05e2f10ee4b6f7696",
            "description": "Ingress to access internal containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e2f10ee4b6f7696",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9091
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9093
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "terraform-20210314104720051900000002",
            "name_prefix": "terraform-",
            "owner_id": "446560830204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "Promethus_Server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0731ff7e592cc7c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prometheus_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446560830204:subnet/subnet-0e275c84ff6ff2ab0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.1.0/24",
            "id": "subnet-0e275c84ff6ff2ab0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446560830204",
            "tags": {
              "Environment": "Prod",
              "Name": "Promethus_Server_subnet"
            },
            "vpc_id": "vpc-0731ff7e592cc7c7a"
          },
          "dependencies": [
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prometheus_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446560830204:vpc/vpc-0731ff7e592cc7c7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-03e96f7983e98c125",
            "default_route_table_id": "rtb-06d919e4bc112c0f4",
            "default_security_group_id": "sg-03aa4c2bc4aaea668",
            "dhcp_options_id": "dopt-25f8ea47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0731ff7e592cc7c7a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06d919e4bc112c0f4",
            "owner_id": "446560830204",
            "tags": {
              "Environment": "Prod",
              "Name": "Promethus_Server_vpc"
            }
          }
        }
      ]
    }
  ]
}